# Connect4

./: Application.cpp  CMakeLists.txt  Field.cpp  Field.hpp  Game.cpp  Game.hpp  Generate.cpp  Generate.hpp  GuiField.cpp  GuiField.hpp  HorizontalBot.cpp  HorizontalBot.hpp  Human.cpp  Human.hpp  Menu.cpp  Menu.hpp  Plan.drawio  Player.cpp  Player.hpp  ProBot.cpp  ProBot.hpp  RandomBot.cpp  RandomBot.hpp  VerticalBot.hpp  main.cpp
src/: Application.cpp  Application.hpp  Field.cpp  Game.cpp  Game.hpp  Generate.cpp  GuiField.cpp  HorizontalBot.cpp  HorizontalBot.hpp  Human.cpp  Player.cpp  Player.hpp  ProBot.cpp  RandomBot.cpp  RandomBot.hpp  VerticalBot.cpp  VerticalBot.hpp  main.cpp
